Uploaded image for project: 'IMPALA'
  1. IMPALA
  2. IMPALA-4546

Incorporate Russian/Moscow timezone changes in to the tz db

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Resolved
    • Critical
    • Resolution: Fixed
    • Impala 2.8.0
    • Impala 2.9.0
    • Backend

    Description

      The issue in short

      select to_utc_timestamp('2016-10-14 00:00:00', 'Europe/Moscow')
      
      Expected result:
      2016-10-13 21:00:00
      
      Actual result:
      2016-10-13 20:00:00
      

      The issue here is [1]

      Most Russians will move to permanent Standard Time, or “winter time”, by setting their clocks 1 hour back on October 26, 2014. This is the same date most Europeans end Daylight Saving Time (DST).
      Current local time in Russia
      But the Russians will only join in the setting back of the clocks this year. From then on they will remain on Standard Time (winter time) and will not be setting their clocks forward again 1 hour along with the rest of Europe in March 2015.
      

      For longterm, we should rely on a standard tz DB rather than letting Impala handle timezone exceptions manually in the code.

      Workaround: Use a custom Java UDF that runs on JDK 8u31 or greater (which has this timezone change embedded.)

      [1] https://www.timeanddate.com/news/time/russia-abandons-permanent-summer-time.html

      Attachments

        Activity

          People

            tarasbob Taras Bobrovytsky
            bharathv Bharath Vissapragada
            Votes:
            0 Vote for this issue
            Watchers:
            5 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: