be/src/exprs/timestamp-functions.cc
@@ -85,7 +85,7 @@ TimestampVal TimestampFunctions::FromUtc(FunctionContext* context,
 
   const StringValue& tz_string_value = StringValue::FromStringVal(tz_string_val);
   time_zone_ptr timezone = TimezoneDatabase::FindTimezone(
-      string(tz_string_value.ptr, tz_string_value.len), ts_value);
+      string(tz_string_value.ptr, tz_string_value.len), ts_value, true);
   if (timezone == NULL) {
     // This should return null. Hive just ignores it.
     stringstream ss;
@@ -123,15 +123,25 @@ TimestampVal TimestampFunctions::ToUtc(FunctionContext* context,
 
   const StringValue& tz_string_value = StringValue::FromStringVal(tz_string_val);
   time_zone_ptr timezone = TimezoneDatabase::FindTimezone(
-      string(tz_string_value.ptr, tz_string_value.len), ts_value);
+      string(tz_string_value.ptr, tz_string_value.len), ts_value, false);
   // This should raise some sort of error or at least null. Hive Just ignores it.
-  if (timezone == NULL) {
+  if (UNLIKELY(timezone == NULL)) {
     stringstream ss;
     ss << "Unknown timezone '" << tz_string_value << "'" << endl;
     context->AddWarning(ss.str().c_str());
     return ts_val;
   }
 
+  if (UNLIKELY(timezone == TimezoneDatabase::TIMEZONE_MSK_PRE_2014 &&
+      ts_value.date().day_number() == 2456957 &&
+      ts_value.time().hours() >= 1)) {
+    // On October 27, 2014 at 1:00 am MSC, Moscow time transitions from UTC+4 with no DST
+    // to UTC+3 with no DST. Because of this, 1am to 1:59:59.999...am MSC happens twice.
+    // We want to be consistent with the existing rule of "in case of ambiguity return
+    // NULL".
+    DCHECK_LT(ts_value.time().hours(), 2);
+    return TimestampVal::null();
+  }
   try {
     local_date_time lt(ts_value.date(), ts_value.time(), timezone,
         local_date_time::NOT_DATE_TIME_ON_ERROR);
@@ -186,21 +196,36 @@ void TimestampFunctions::UnixAndFromUnixClose(FunctionContext* context,
   }
 }
 
-time_zone_ptr TimezoneDatabase::FindTimezone(const string& tz, const TimestampValue& tv) {
-  // The backing database does not capture some subtleties, there are special cases
-  if ((tv.date().year() < 2011 || (tv.date().year() == 2011 && tv.date().month() < 4)) &&
-      (iequals("Europe/Moscow", tz) || iequals("Moscow", tz) || iequals("MSK", tz))) {
-    // We transition in pre April 2011 from using the tz_database_ to a custom rule
-    // Russia stopped using daylight savings in 2011, the tz_database_ is
-    // set up assuming Russia uses daylight saving every year.
-    // Sun, Mar 27, 2:00AM Moscow clocks moved forward +1 hour (a total of GMT +4)
-    // Specifically,
-    // UTC Time 26 Mar 2011 22:59:59 +0000 ===> Sun Mar 27 01:59:59 MSK 2011
-    // UTC Time 26 Mar 2011 23:00:00 +0000 ===> Sun Mar 27 03:00:00 MSK 2011
-    // This means in 2011, The database rule will apply DST starting March 26 2011.
-    // This will be a correct +4 offset, and the database rule can apply until
-    // Oct 31 when tz_database_ will incorrectly attempt to turn clocks backwards 1 hour.
-    return TIMEZONE_MSK_PRE_2011_DST;
+time_zone_ptr TimezoneDatabase::FindTimezone(
+    const string& tz, const TimestampValue& tv, bool tv_in_utc) {
+  // The backing database does not handle timezone rule changes.
+  if (iequals("Europe/Moscow", tz) || iequals("Moscow", tz) || iequals("MSK", tz)) {
+    if (tv.date().year() < 2011 || (tv.date().year() == 2011 && tv.date().month() < 4)) {
+      // Between January 19, 1992 and March 27, 2011 Moscow time was UTC+3 with DST. On
+      // March 27, 2011 Moscow time transitioned to UTC+4 with no DST. NOTE: We currently
+      // do not handle Moscow time conversions for dates before January 19, 1992
+      // correctly (Impala incorrectly thinks the Moscow timezone is UTC+3 with DST
+      // instead of UTC+2 with DST for those dates).
+      return TIMEZONE_MSK_PRE_2011_DST;
+    }
+    // On October 26, 2014 at 22:00:00 UTC, Moscow time transitioned to UTC+3 with no
+    // DST. We have to make a precise time check here, unlike in the case above, because
+    // we can't rely on the timezone database to handle the moment of transition because
+    // the rule change does not coincide with a DST change.
+    const int MSK_TRANSITION_DAY = 2456956;
+    const int MSK_TRANSITION_HOUR_UTC = 22;
+    const int MSK_UTC_OFFSET = 4;
+    if (tv.date().day_number() < MSK_TRANSITION_DAY) return TIMEZONE_MSK_PRE_2014;
+    if (tv_in_utc) {
+      if (tv.date().day_number() == MSK_TRANSITION_DAY &&
+          tv.time().hours() < MSK_TRANSITION_HOUR_UTC) {
+        return TIMEZONE_MSK_PRE_2014;
+      }
+    } else if (tv.date().day_number() < MSK_TRANSITION_DAY + 1 || (
+        tv.date().day_number() == MSK_TRANSITION_DAY + 1 &&
+        tv.time().hours() < (MSK_TRANSITION_HOUR_UTC + MSK_UTC_OFFSET) % 24)) {
+      return TIMEZONE_MSK_PRE_2014;
+    }
   }
 
   // See if they specified a zone id
